Fix horizontal scrollbar issue

--- a/main.css
+++ b/main.css
@@ -90,7 +90,6 @@ main {
     justify-content: center;
     align-items: center;
     margin: 0;
-    width: 100vw;
     flex-direction: column;
     flex-grow: 5;
     z-index: 1;
